# Deco_with_fetch

./: CMakeLists.txt  README.md  package.xml
config/: deco.rviz
euslisp/: catch_balloon.l  check_decoration.l  common_func.l  demo_main.l  instruct_robot_to_human.l  interact_with_human.l  place_balloon.l  recognize_decoration.l  recognize_wall.l  suggest_to_human.l  test_manip_balloon.l  test_push_balloon.l  think_decoration.l
eyebrows_server/app/views/: lbrow.jade  rbrow.jade
gcl_changes/msg/: TextSyntax.msg
gcl_changes/node_scripts/: analyze_text.py
launch/: deco_demo.launch  deco_demo_without_chat.launch  deco_rviz.launch  rosbag_play.launch  rosbag_record.launch
launch/gazebo/: deco_scene.launch
msg/: InstructInfo.msg
scripts/: chat_node.py  check_deco_status.py  eyebrows_topic_relay.py  instruct_human_to_robot.py  make_deco_imgs.py  suggest_place_pos.py  suggest_robot_to_human.py  text_to_eyebrows.py  think_deco.py  think_deco_node.py  xyz_to_screenpoint.py
srv/: DecoImgs.srv  DecoStatus.srv
worlds/: deco.world
